--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,9 +6,6 @@ body {
   color: #212529;
 }
 
-
-
-
 .animation-target {
   -webkit-animation: animation 4500ms linear both;
   margin-left: auto;
@@ -262,8 +259,6 @@ body {
 
 .sign_word h1 {
   padding-top: 330px;
-
-
 }
 
 
@@ -339,7 +334,6 @@ body {
 
 
 .btn2 {
-
   float: left;
   color: #00000027;
   text-transform: uppercase;
@@ -429,8 +423,8 @@ section {
 /* chav */
 .chavo {
   padding-top: 20px;
-
   background-color: rgb(19, 19, 19);
+  padding-bottom: 50px;
 }
 
 .content-1 {
@@ -441,14 +435,7 @@ section {
   justify-content: center;
 }
 
-
-
-.item1,
-.item2,
-.item3,
-.item4,
-.item5,
-.item6 {
+.item {
   color: #ffffff;
   border: 4px solid #cc02ff41;
   margin: 10px;
@@ -456,7 +443,7 @@ section {
   padding: 20px 20px;
   text-align: center;
   font-size: 20px;
-  background-color: none;
+  background-color: transparent;
   height: 200px;
   width: 500px;
 }
@@ -469,7 +456,6 @@ section {
   max-width: 1300px;
   width: 100%;
   margin: 0 auto;
-
   padding: 10px;
   padding-top: 50px !important;
 }
@@ -489,6 +475,38 @@ img {
   border-bottom: 2px dotted #000;
   width: 230px;
   float: right;
+}
+
+
+
+.ss-content .ss {
+  display: flex;
+  justify-content: space-around;
+  margin: auto;
+}
+
+.ss {
+
+  padding-top: 70px;
+}
+
+.ss img {
+  border: 2px solid #cc02ff41;
+  border-radius: 15px;
+}
+
+#le {
+  text-align: left;
+}
+
+#ri {
+  text-align: right;
+}
+
+.sstext {
+  text-align: center;
+  padding-top: 20px;
+  width: 500px;
 }
 
 @media screen and (max-width: 1000px) {
@@ -533,12 +551,6 @@ img {
   }
 }
 
-.ss-content .ss {
-  display: flex;
-  justify-content: space-around;
-  margin: auto;
-}
-
 @media screen and (max-width: 1000px) {
   .center {
     display: flex;
@@ -559,12 +571,7 @@ img {
     font-size: 20px;
   }
 
-  .item1,
-  .item2,
-  .item3,
-  .item4,
-  .item5,
-  .item6 {
+  .item {
     height: auto;
   }
 }
@@ -575,30 +582,57 @@ img {
   }
 }
 
-.ss {
+/* footer */
 
-  padding-top: 70px;
+.footer {
+  background: rgb(19, 19, 19);
+  border-top: 1px solid #212529;
 }
 
-.ss img {
-  border: 2px solid #cc02ff41;
-  border-radius: 15px;
+.footer_content {
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-end;
+  padding-top: 40px;
 }
 
-#le {
-  text-align: left;
-
-
+.footer_cor {
+  color: #fff;
+  display: flex;
+  align-items: center;
 }
 
-#ri {
-  text-align: right;
+.footer_cor p {
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
-.sstext {
-  text-align: center;
-  padding-top: 20px;
-  width: 500px;
+.footer_cor img {
+  margin-right: 10px;
 }
 
-/*Modal box */
+.footer_icon {
+  color: #fff;
+}
+
+.footer_icon i {
+  font-size: 25px;
+  margin-right: 10px;
+  transition: 1s ease;
+}
+
+.footer_icon a {
+  text-decoration: none;
+  color: #fff;
+}
+
+.footer_icon i:hover {
+  color: #8c00ff;
+}
+
+@media screen and (max-width:655px) {
+  .footer_content {
+    flex-direction: column;
+    align-items: center;
+  }
+}
