--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -594,6 +594,7 @@ img {
   justify-content: space-around;
   align-items: flex-end;
   padding-top: 40px;
+  padding-bottom: 20px;
 }
 
 .footer_cor {
